--- a/School/backend/nginx.conf
+++ b/School/backend/nginx.conf
@@ -19,8 +19,8 @@ server {
     server_name yourdomain.com www.yourdomain.com;
 
     # SSL Configuration
-    ssl_certificate /path/to/your/certificate.crt;
-    ssl_certificate_key /path/to/your/private.key;
+    ssl_certificate /app/ssl/certificate.crt;
+    ssl_certificate_key /app/ssl/private.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers off;
