--- a/School/backend/requirements.txt
+++ b/School/backend/requirements.txt
@@ -8,6 +8,8 @@ celery==5.3.4
 django-redis==5.4.0
 Pillow==10.2.0
 django-filter==23.5
+boto3==1.34.0
+botocore==1.34.0
 djangorestframework-camel-case==1.4.2
 drf-yasg==1.21.7
 python-decouple==3.8
@@ -24,4 +26,5 @@ uvicorn==0.27.0
 websockets==12.0
 django-health-check==3.18.1
 sentry-sdk==1.40.0
+django-prometheus==2.3.1
 dj-database-url==3.0.1
