🚀 Complete Enterprise Readiness & AI Enhancements
✅ Enterprise Readiness Checklist Items 1 & 5 Complete:
- Pre-Production Checklist: Environment config, SSL validation, security hardening
- Staff Training Programs: Comprehensive training materials and certification framework

🤖 AI Enhancements Added:
- Computer Vision & Image Processing
- Speech-to-Text & Text-to-Speech
- Curriculum Converter AI
- Content Generation Engine
- Recommendation System
- Adaptive Learning Algorithms

📚 Training Infrastructure:
- System Admin Training Manual
- User Support Training Manual
- Training Completion Scripts
- Assessment Tools & Progress Tracking

🔧 Production Ready:
- Docker deployment configurations
- Production environment setup
- Security hardening
- Monitoring & logging infrastructure

--- a/School/backend/requirements.ai.txt
+++ b/School/backend/requirements.ai.txt
@@ -17,3 +17,13 @@ langchain==0.0.350
 chromadb==0.4.0
 redis==5.0.0
 celery==5.3.0
+Pillow==10.1.0
+opencv-python==4.8.1.78
+timm==0.9.12
+datasets==2.15.0
+PyPDF2==3.0.1
+python-docx==1.1.1
+pytesseract==0.3.10
+nltk==3.8.1
+soundfile==0.12.1
+librosa==0.10.1
