--- a/School/backend/requirements.txt
+++ b/School/backend/requirements.txt
@@ -13,6 +13,7 @@ botocore==1.34.0
 djangorestframework-camel-case==1.4.2
 drf-yasg==1.21.7
 python-decouple==3.8
+python-dotenv==1.0.0
 gunicorn==21.2.0
 whitenoise==6.6.0
 channels==4.0.0
@@ -27,3 +28,6 @@ django-health-check==3.18.1
 sentry-sdk==1.40.0
 django-prometheus==2.3.1
 dj-database-url==3.0.1
+django-otp==1.5.0
+qrcode==7.4.2
+django-two-factor-auth==1.16.0
