--- a/School/package.json
+++ b/School/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:production": "NODE_ENV=production vite build",
+    "build:staging": "NODE_ENV=staging vite build",
     "build:analyze": "vite build --mode analyze",
+    "build:netlify": "npm run build:production",
     "preview": "vite preview",
     "preview:dist": "vite preview --port 4173",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext js,jsx --fix",
     "type-check": "tsc --noEmit",
-    "optimize": "npm run lint:fix && npm run build",
+    "optimize": "npm run lint:fix && npm run build:production",
     "check-optimizations": "node optimize-build.js",
-    "serve:optimized": "npm run build && npm run preview",
+    "serve:optimized": "npm run build:production && npm run preview",
+    "netlify:build": "npm run build:netlify",
+    "netlify:deploy": "npm run build:netlify && netlify deploy --prod",
+    "netlify:preview": "npm run build:netlify && netlify deploy --dir=dist",
     "prepare": "husky"
   },
   "dependencies": {
