Fix Netlify deployment issues
- Update NETLIFY_DEPLOYMENT_README.md with correct base directory and build settings
- Remove prepare script from package.json to fix husky dependency issue in production builds
- Add comprehensive Netlify configuration details and troubleshooting

--- a/School/package.json
+++ b/School/package.json
@@ -20,8 +20,7 @@
     "serve:optimized": "npm run build:production && npm run preview",
     "netlify:build": "npm run build:netlify",
     "netlify:deploy": "npm run build:netlify && netlify deploy --prod",
-    "netlify:preview": "npm run build:netlify && netlify deploy --dir=dist",
-    "prepare": "husky"
+    "netlify:preview": "npm run build:netlify && netlify deploy --dir=dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
