--- a/School/backend/requirements.txt
+++ b/School/backend/requirements.txt
@@ -28,6 +28,9 @@ django-health-check==3.18.1
 sentry-sdk==1.40.0
 django-prometheus==2.3.1
 dj-database-url==3.0.1
+
+# Barcode generation
+python-barcode==0.15.1
 django-otp==1.5.0
 qrcode==7.4.2
 django-two-factor-auth==1.16.0
