--- a/School/public/manifest.json
+++ b/School/public/manifest.json
@@ -12,15 +12,9 @@
   "categories": ["education", "productivity"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
+      "src": "/vite.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
   ],
@@ -30,35 +24,21 @@
       "short_name": "AI Chat",
       "description": "Chat with your AI learning assistant",
       "url": "/ai-assistant",
-      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/vite.svg", "sizes": "any" }]
     },
     {
       "name": "Courses",
       "short_name": "My Courses",
       "description": "Browse and manage your courses",
       "url": "/courses",
-      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/vite.svg", "sizes": "any" }]
     },
     {
       "name": "Dashboard",
       "short_name": "Dashboard",
       "description": "View your learning progress",
       "url": "/dashboard",
-      "icons": [{ "src": "/icon-192x192.png", "sizes": "192x192" }]
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshot-desktop.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
+      "icons": [{ "src": "/vite.svg", "sizes": "any" }]
     }
   ]
 }
