Fix MIME type errors: add _headers file, remove JSX files from build output, and enhance Vite config

--- a/School/package.json
+++ b/School/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:production": "NODE_ENV=production vite build",
-    "build:staging": "NODE_ENV=staging vite build",
-    "build:analyze": "vite build --mode analyze",
+    "build": "vite build && rm -f dist/assets/*.jsx",
+    "build:production": "NODE_ENV=production vite build && rm -f dist/assets/*.jsx",
+    "build:staging": "NODE_ENV=staging vite build && rm -f dist/assets/*.jsx",
+    "build:analyze": "vite build --mode analyze && rm -f dist/assets/*.jsx",
     "build:netlify": "npm run build:production",
     "preview": "vite preview",
     "preview:dist": "vite preview --port 4173",
