feat: Integrate Auth0 authentication, optimize for Netlify deployment
- Add Auth0 React SDK integration with conditional provider
- Update axios to prefer Auth0 tokens with JWT fallback
- Wire Auth0 login/logout in Navbar component
- Fix BrandingContext to use shared axios instance
- Update Netlify config with Auth0 CSP and corrected headers
- Add environment variables and documentation
- Create registration guide and Auth0 setup docs
- Fix netlify.toml syntax errors
- Add Auth0 token bridge for non-React code

--- a/School/package.json
+++ b/School/package.json
@@ -5,22 +5,28 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && rm -f dist/assets/*.jsx",
-    "build:production": "NODE_ENV=production vite build && rm -f dist/assets/*.jsx",
-    "build:staging": "NODE_ENV=staging vite build && rm -f dist/assets/*.jsx",
-    "build:analyze": "vite build --mode analyze && rm -f dist/assets/*.jsx",
-    "build:netlify": "npm run build:production",
+    "build": "vite build",
+    "build:production": "NODE_ENV=production vite build",
+    "build:staging": "NODE_ENV=staging vite build",
+    "build:analyze": "vite build --mode analyze",
+    "build:netlify": "NODE_ENV=production VITE_APP_ENV=production vite build --mode production",
+    "build:netlify:preview": "NODE_ENV=production VITE_APP_ENV=preview vite build --mode production",
     "preview": "vite preview",
     "preview:dist": "vite preview --port 4173",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext js,jsx --fix",
     "type-check": "tsc --noEmit",
-    "optimize": "npm run lint:fix && npm run build:production",
+    "optimize": "npm run lint:fix && npm run build:netlify",
     "check-optimizations": "node optimize-build.js",
-    "serve:optimized": "npm run build:production && npm run preview",
-    "netlify:build": "npm run build:netlify",
-    "netlify:deploy": "npm run build:netlify && netlify deploy --prod",
-    "netlify:preview": "npm run build:netlify && netlify deploy --dir=dist"
+    "serve:optimized": "npm run build:netlify && npm run preview",
+    "netlify:build": "./netlify-build.sh",
+    "netlify:deploy": "npm run build:netlify && netlify deploy --prod --dir=dist",
+    "netlify:preview": "npm run build:netlify && netlify deploy --dir=dist",
+    "netlify:serve": "npm run build:netlify && npm run preview:dist",
+    "clean": "rm -rf dist node_modules/.vite",
+    "clean:all": "rm -rf dist node_modules",
+    "reinstall": "npm run clean:all && npm install",
+    "postinstall": "npm run type-check"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
