--- a/School/netlify.toml
+++ b/School/netlify.toml
@@ -19,7 +19,7 @@
 # Redirect API calls to backend service
 [[redirects]]
   from = "/api/*"
-  to = "https://your-django-backend.herokuapp.com/api/:splat"
+  to = "https://ai-academic-stack-production.up.railway.app/api/:splat"
   status = 200
   force = true
 
@@ -43,7 +43,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://www.googletagmanager.com https://www.google-analytics.com https://cdn.auth0.com data:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.openedtex.com wss://api.openedtex.com https://cdn.jsdelivr.net https://www.google-analytics.com https://*.auth0.com https://your-django-backend.herokuapp.com; frame-src 'self' https://*.auth0.com;"
+  Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://www.googletagmanager.com https://www.google-analytics.com https://cdn.auth0.com data:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.openedtex.com wss://api.openedtex.com https://cdn.jsdelivr.net https://www.google-analytics.com https://*.auth0.com https://ai-academic-stack-production.up.railway.app wss://ai-academic-stack-production.up.railway.app; frame-src 'self' https://*.auth0.com;"
 
 # Cache static assets aggressively
 [[headers]]
