chore: Update Railway URL to aiacademy-production-941d.up.railway.app in all configs

--- a/School/backend/.env.example
+++ b/School/backend/.env.example
@@ -10,7 +10,7 @@ JWT_SECRET_KEY=use-a-long-random-string
 
 # Hosts
 # Backend public hostname (no scheme)
-ALLOWED_HOSTS=api.yourdomain.com
+ALLOWED_HOSTS=aiacademy-production-941d.up.railway.app
 
 # Frontend origin(s)
 FRONTEND_URL=https://school.yourdomain.com
