--- a/School/netlify.toml
+++ b/School/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # Build command for the frontend
-  command = "npm run build:netlify"
+      Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://www.googletagmanager.com https://www.google-analytics.com https://cdn.auth0.com data:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data: https: blob:; connect-src 'self' https://api.openedtex.com wss://api.openedtex.com https://cdn.jsdelivr.net https://www.google-analytics.com https://*.auth0.com https://aiacademy-production-941d.up.railway.app wss://aiacademy-production-941d.up.railway.app; frame-src 'self' https://*.auth0.com;";ommand = "npm run build:netlify"
   # Directory to publish (Vite's dist folder)
   publish = "dist"
 
@@ -19,7 +19,7 @@
 # Redirect API calls to backend service
 [[redirects]]
   from = "/api/*"
-  to = "https://ai-academic-stack-production.up.railway.app/api/:splat"
+  to = "https://aiacademy-production-941d.up.railway.app/api/:splat"
   status = 200
   force = true
 
