Fix Railway Docker deployment: move Dockerfile to root, update paths, and improve deployment guide
- Move Dockerfile from backend/ to root directory for Railway Docker builder
- Update Dockerfile COPY command to work from root directory
- Update deployment guide with correct Dockerfile path and troubleshooting
- Add SSL-enabled Postgres template option for enhanced security

--- a/School/Dockerfile
+++ b/School/Dockerfile
@@ -28,8 +28,8 @@ RUN apt-get update \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project
-COPY . .
+# Copy backend project files
+COPY backend/ .
 
 # Create logs directory
 RUN mkdir -p logs
