docs(render): add Render.com deployment guide; docs: add senior-dev deployment brief; fix(docker): copy backend/requirements.txt before pip install to avoid missing file

--- a/School/Dockerfile
+++ b/School/Dockerfile
@@ -25,6 +25,10 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
+# The top-level requirements.txt includes "-r backend/requirements.txt",
+# so ensure that path exists in the image before installing.
+RUN mkdir -p backend
+COPY backend/requirements.txt backend/requirements.txt
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
