feat(settings): make AWS Secrets Manager optional via USE_AWS_SECRETS; docs(render): add guidance and env example

--- a/School/backend/.env.example
+++ b/School/backend/.env.example
@@ -20,6 +20,13 @@ CSRF_TRUSTED_ORIGINS=https://school.yourdomain.com,https://go4itacademy.netlify.
 # Database (example Postgres via env, adjust as needed)
 # DATABASE_URL=postgres://user:pass@host:5432/dbname
 
+# Optional: AWS Secrets Manager (disable by default on Render)
+# When true, settings will attempt to pull a JSON blob of secrets from AWS and merge
+# any missing keys into environment variables. Existing env vars take precedence.
+# USE_AWS_SECRETS=False
+# AWS_SECRET_NAME=openedtex/production/secrets
+# AWS_REGION=us-east-1
+
 # Optional email settings for password resets, notifications
 # EMAIL_HOST=smtp.sendgrid.net
 # EMAIL_HOST_USER=apikey
