fix(backend): add requests dependency for ai_service_client; docs(render): add General settings snapshot

--- a/School/backend/requirements.txt
+++ b/School/backend/requirements.txt
@@ -34,3 +34,6 @@ python-barcode==0.15.1
 django-otp==1.5.0
 qrcode==7.4.2
 django-two-factor-auth==1.16.0
+
+# HTTP client used by ai_service_client
+requests==2.32.3
