--- a/School/package.json
+++ b/School/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "name": "openedtex-frontend",
   "private": true,
   "version": "2.1.0",
@@ -64,6 +64,7 @@
     "@types/node": "^24.3.1",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -72,6 +73,8 @@
     "jsdom": "^26.1.0",
     "lighthouse": "^12.8.2",
     "lint-staged": "^16.1.6",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.0",
     "terser": "^5.43.1",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
